--- a/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
@@ -81,20 +81,20 @@
       <div class="col-12">
         <form [formGroup]="formProntuario">
           <mat-accordion class="detail-consulta">
+
+            <!-- Alergias -->
             <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" hideToggle>
               <mat-expansion-panel-header>
                 <h3>Alergias</h3>
               </mat-expansion-panel-header>
-
               <label class="d-block mb-2">Possui alguma alergia?</label>
-
               <mat-radio-group aria-label="Select an option" class="d-block" color="primary" [formControl]="controlAlergia">
                 <mat-radio-button [value]="option?.value" class="me-3" *ngFor="let option of optionsRadio"
-                  (change)="validatorsDynamic(option.value)">{{ option?.description }}</mat-radio-button>
+                  (change)="validatorsDynamic(option.value, 'alergias')">{{ option?.description }}</mat-radio-button>
               </mat-radio-group>
 
               <ng-container *ngIf="controlAlergia.value === true">
-                <ng-container formArrayName="alergias" *ngFor="let alergia of formDataAlergia.controls; index as i">
+                <ng-container formArrayName="alergias" *ngFor="let alergia of formArrayAlergia.controls; index as i">
                   <div class="d-block animate__fadeInUp" [formGroupName]="i">
                     <mat-form-field>
                       <mat-label>Descrição</mat-label>
@@ -105,8 +105,8 @@
                     </mat-form-field>
 
                     <mat-dialog-actions align="end">
-                      <button mat-button *ngIf="i > 0" (click)="removeAlergia(i)">remover</button>
-                      <button mat-button (click)="addNewAlergia('alergias')" *ngIf="i === 0">novo</button>
+                      <button mat-button *ngIf="i > 0" (click)="removeObject(i, 'alergia')">remover</button>
+                      <button mat-button (click)="addNewObjectControl(controlAlergia.value, 'alergias')" *ngIf="i === 0">novo</button>
                     </mat-dialog-actions>
                   </div> <!-- formGroupName-->
                 </ng-container> <!-- formArray -->
@@ -116,48 +116,77 @@
               </mat-action-row>
             </mat-expansion-panel>
 
+            <!-- Medicamento-->
             <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)" hideToggle>
               <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Destination
-                </mat-panel-title>
-                <mat-panel-description>
-                  Type the country name
-                  <mat-icon>map</mat-icon>
-                </mat-panel-description>
+                <h3>Medicamento</h3>
               </mat-expansion-panel-header>
 
-              <mat-form-field>
-                <mat-label>Country</mat-label>
-                <input matInput>
-              </mat-form-field>
+              <label class="d-block mb-2">Possui alguma alergia a medicamentos?</label>
 
+              <mat-radio-group aria-label="Select an option" class="d-block" color="primary" [formControl]="controlMedicamento">
+                <mat-radio-button [value]="option?.value" class="me-3" *ngFor="let option of optionsRadio"
+                  (change)="validatorsDynamic(option.value, 'medicamentos')">{{ option?.description }}</mat-radio-button>
+              </mat-radio-group>
+
+              <ng-container *ngIf="controlMedicamento.value === true">
+                <ng-container formArrayName="medicamentos" *ngFor="let medicamento of formArrayMedicamento.controls; index as i">
+                  <div class="d-block animate__fadeInUp" [formGroupName]="i">
+                    <mat-form-field>
+                      <mat-label>Descrição</mat-label>
+                      <input matInput formControlName="descricao">
+                      <mat-error class="p-0">
+                      <app-error-control-message [control]="medicamento.controls.descricao" label="Descrição"></app-error-control-message>
+                    </mat-error>
+                    </mat-form-field>
+
+                    <mat-dialog-actions align="end">
+                      <button mat-button *ngIf="i > 0" (click)="removeObject(i, 'medicamentos')">remover</button>
+                      <button mat-button (click)="addNewObjectControl(controlMedicamento.value, 'medicamentos')" *ngIf="i === 0">novo</button>
+                    </mat-dialog-actions>
+                  </div> <!-- formGroupName-->
+                </ng-container> <!-- formArray -->
+              </ng-container>
               <mat-action-row>
-                <button mat-button color="warn" (click)="prevStep()">Previous</button>
-                <button mat-button color="primary" (click)="nextStep()">Next</button>
+                <button mat-button color="warn" (click)="prevStep()">Voltar</button>
+                <button mat-button color="primary" (click)="nextStep()">Próximo</button>
               </mat-action-row>
             </mat-expansion-panel>
 
+            <!-- Doença Crônica-->
             <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" hideToggle>
               <mat-expansion-panel-header>
-                <mat-panel-title>
-                  Day of the trip
-                </mat-panel-title>
-                <mat-panel-description>
-                  Inform the date you wish to travel
-                  <mat-icon>date_range</mat-icon>
-                </mat-panel-description>
+                <h3>Doença Crônica</h3>
               </mat-expansion-panel-header>
 
-              <mat-form-field>
-                <mat-label>Date</mat-label>
-                <input matInput [matDatepicker]="picker" (focus)="picker.open()" readonly>
-              </mat-form-field>
-              <mat-datepicker #picker></mat-datepicker>
+              <label class="d-block mb-2">Possui alguma doença crônica?</label>
 
+              <mat-radio-group aria-label="Select an option" class="d-block" color="primary" [formControl]="controlDoencaCronica">
+                <mat-radio-button [value]="option?.value" class="me-3" *ngFor="let option of optionsRadio"
+                  (change)="validatorsDynamic(option.value, 'doencaCronica')">{{ option?.description }}</mat-radio-button>
+              </mat-radio-group>
+
+              <ng-container *ngIf="controlDoencaCronica.value === true">
+                <ng-container formArrayName="doencaCronica" *ngFor="let doencaCronica of formArrayDoencaCronica.controls; index as i">
+                  <div class="d-block animate__fadeInUp" [formGroupName]="i">
+                    <mat-form-field>
+                      <mat-label>Descrição</mat-label>
+                      <input matInput formControlName="descricao">
+                      <mat-error class="p-0">
+                      <app-error-control-message [control]="doencaCronica.controls.descricao" label="Descrição"></app-error-control-message>
+                    </mat-error>
+                    </mat-form-field>
+
+                    <mat-dialog-actions align="end">
+                      <button mat-button *ngIf="i > 0" (click)="removeObject(i, 'doencaCronica')">remover</button>
+                      <button mat-button (click)="addNewObjectControl(controlDoencaCronica.value, 'doencaCronica')" *ngIf="i === 0">novo</button>
+                    </mat-dialog-actions>
+                  </div> <!-- formGroupName-->
+                </ng-container> <!-- formArray -->
+              </ng-container>
               <mat-action-row>
-                <button mat-button color="warn" (click)="prevStep()">Previous</button>
-                <button mat-button color="primary" (click)="nextStep()">End</button>
+                <button mat-button color="warn" (click)="prevStep()">Voltar</button>
+                <button mat-button color="primary" (click)="nextStep()">Próximo</button>
               </mat-action-row>
             </mat-expansion-panel>
 
